Changelog
=========

1.0b2 - Unreleased
------------------

* Make the dependency on `Products.CMFCore` a soft one.
  [witsch]


1.0b1 - Released October 10, 2009
---------------------------------

* Fix the WebDAV content creation process by properly returning a NullResource
  when required.
  [optilude]


1.0a3 - Released May 11, 2009
-----------------------------

* Let `objectIds` always return all object ids, even with partial ordering.
  [witsch]


1.0a2 - Released May 7, 2009
----------------------------

* Fix a bug in the default ordering that would cause the ``pos`` dict to get
  out of sync when an item is deleted.
  [optilude]

* Declare ``IContainer`` support.
  [optilude]

* Properly set ``__parent__`` and ``__name__`` for ``IContained`` in
  ``_setOb()``.
  [optilude]

* Add ``__getitem__``, needed when not using the CMF mix-in.
  [optilude]

* Added ``__setitem__``, ``__contains__`` and ``__delitem__`` to support a
  dict-like API.
  [optilude]

* Fix issue with removing non-orderable content for partial ordering suppport.
  [witsch]

* Fix ``getObjectPosition`` to return a value representing "no position" for
  non-orderable content instead of raising an error.
  [witsch]

* Fix boolean value of the btree-based folder base class.
  [witsch]

* Factor CMF out of the base classes for the new btree-based folder class
  and simplify things a bit afterwards.
  [witsch]

* Add adapter providing explicit ordering only for "orderable" content.
  [witsch]

* Clean up tests and their setup.
  [witsch]


1.0a1 - Released May 27, 2008
-----------------------------

* Initial release
  [optilude, tesdal, witsch]