@@ -2,6 +2,7 @@ from zope.component import provideAdapter
 from zope.annotation.attribute import AttributeAnnotations
 from plone.folder.default import DefaultOrdering
 from plone.folder.partial import PartialOrdering
+from plone.folder.unordered import UnorderedOrdering
 
 
 class PloneFolderLayer:
@@ -9,6 +10,7 @@ class PloneFolderLayer:
     @classmethod
     def setUp(cls):
         provideAdapter(DefaultOrdering)
+        provideAdapter(UnorderedOrdering, name=u'unordered')
         provideAdapter(AttributeAnnotations)
 
     @classmethod
